# FileLocker

./: App.xaml  App.xaml.cs  FileLocker.csproj  MainWindow.xaml  MainWindow.xaml.cs  PasswordWindow.xaml  PasswordWindow.xaml.cs  README.md
Locker/: LockerEngine.cs
Properties/: Resources.Designer.cs  Settings.Designer.cs
Properties/PublishProfiles/: FolderProfile.pubxml
RustCode/: Cargo.toml  lib.rs
