[package]
name = "filelocker"
version = "0.1.5"
edition = "2024"

[dependencies]
crc32fast = "1.5.0"
num_cpus = "1.17.0"
rayon = "1.11.0"
reed-solomon-simd = "3.1.0"
ring = "0.17.14"
tar = "0.4.44"
walkdir = "2.5.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"